@@ -1,3 +1,5 @@
+25.jan (lv)
+      - MusicXML import fixes: voltas
 23.jan (lv)
       - MusicXML export fixes: dalsegno and friends
       (db)
